Make sure tooltip is above everything (if overflows the graph area).

--- a/src/style/expath-theme.css
+++ b/src/style/expath-theme.css
@@ -107,7 +107,7 @@ td.cell-code {
   margin: 10pt;
   padding-top: 5px;
   padding-bottom: 6px;
-  background: #fbfcfc;
+  background: #f5f6f7;
   border: 0.8px solid #dee2e6;
   border-radius: 5px;
   color: #585a5c;
